Refactor: alart() -> SnackBAr at CHeckoutFixedPage